# RecipeBox_V1

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
recipe/: admin.py  forms.py  models.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20210818_1717.py  0003_auto_20210818_1807.py  0004_alter_recipe_directions.py  0005_auto_20210818_1842.py
templates/: author_detail.html  generic_form.html  index.html  recipe_detail.html
